[package]
name = "memory-hacking"
version = "0.1.0"
edition = "2021"

# Add this
[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
]
